[metadata]
name = sympy_adc
version = 0.0.2
description = sympy_adc - Library for Deriving for ADC Equations
url = https://github.com/jonasleitner/sympy_adc
author = Jonas Leitner
license = GPL v3
license_file = LICENSE

[options]
packages = find:
python_requires = >=3.10
install_requires =
    sympy >= 1.11

[options.packages.find]
exclude =
    tests*