[metadata]
name = adcgen
version = 0.0.4
description = adcgen - Library for Deriving for ADC Equations
url = https://github.com/jonasleitner/adcgen
author = Jonas Leitner, Linus Dittmer
license = GPL v3
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.10
install_requires =
    sympy >= 1.11

[options.packages.find]
exclude =
    tests*
